[TECH TASK]: Small refactoring
